# prod-2025-promo-api

./: README.md  docker-compose.yml  flake.nix
solution/solution/: Cargo.toml  README.md
solution/solution/.sqlx/: query-03a4e091fdb1fa1e371ec5010fb02409a98d1016ee0f0559db166ab91ecfe5dd.json  query-1ea05c44c9c1dcd9f649da4b6de016fcd44f1be6cc61f2a649326a661c6848bb.json  query-307ade2341fd99afd8c2eed29c8844d1aa1fd61049c2c198c4551d3940c4e753.json  query-321f93b31d7a13ca6781b06a5954a6a17324cfb7c9abdbb6875b595ac00dd044.json  query-3300cd7bfba8195ca20762a058ff2bc89cacefe67e0d6c9d68365243207bc079.json  query-3b3107dea67c74f3d94b26438946e25fabf07be5c35921170a34588f788ee179.json  query-430ddcd052ad605e4bb9e02b4df069dc58f577bdb0c5d39c772c730b7b265b5c.json  query-438d651e3289e37131f5b9aec3f8ba5468ba1cb8992be4223d1829610c11a571.json  query-4776b945566eab02f94f5248f0ceacb77585d0ae1c0aaa72154ffc4d02a2db98.json  query-499ac2e2916e86014b290770ab296ba08a22a0bc8573a5d4bcfdbb6842b42596.json  query-606265053de5a541f684bab38d48378add1c4c7a976640313d9555f065ef7c1c.json  query-60f4012ee32a997487d0c04e6511528b5dd6c80f4392e4876ec33167476f5f6b.json  query-6c60481c0230239d5204b8e779d935d00d5151703a8730a53684a6d70a965c40.json  query-6d703c78f5cad72825600a11c4257b0f76c9e0ee863d008b7b150030b0e96c69.json  query-6e06273c425abf0d231d85fa35d3ab33471174b96d7464a9719bad6ad77dd2f0.json  query-76610b6ecc0f44f7f8ae8d57dfad45497430fb272c6d3b719a9e26cd94bbfea9.json  query-858913eff910aaf353fbd2522803228a3dfd66769f929a27a3966cf9afb1d48f.json  (+25 more)
solution/solution/assets/: ping.html
solution/solution/src/: lib.rs  (+2 more)
(+102 files in other folders)
