[package]
name = "solution"
version = "0.1.0"
authors = ["NikSne <commits@niksne.ru>"]
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-lab = "0.23"

tokio-stream = "0.1.17"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
strum = "0.26"
strum_macros = "0.26"

log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres",
    "uuid",
    "chrono", 
    "macros", 
    "migrate", 
    "json"
] }
redis = { version  = "0.27", features = ["tokio-comp"] }
deadpool-redis = "0.18"

validator = { version = "0.19", features = ["derive"] }
rust_iso3166 = "0.1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["v7", "macro-diagnostics", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["json"] }
